<resources>
    <string name="app_name">TaskManager</string>
    <string name="str_menu">Menu</string>
    <string name="str_ajout">Add</string>
    <string name="str_suppr">Delete</string>
    <string name="str_tache">Task</string>
    <string name="str_envoyer">Send</string>
    <string name="nom_DB">tacheDB.sqlite</string>
    <string name="str_nom">Name</string>
    <string name="str_nom_tache">Name of the task *</string>
    <string name="str_description">Description</string>
    <string name="str_duree">Time</string>
    <string name="str_echeance">Due date</string>
    <string name="str_categorie">Category</string>
    <string name="str_recurence">Recurrence</string>
    <string name="str_urgence">Gravity</string>
    <string name="str_invite">Guest (s)</string>
    <string name="str_description_tache">Description of the task *</string>
    <string name="str_duree_tache">Time</string>
    <string name="str_ajout_tache">Add a task</string>
    <string name="str_heure">Time (hour)</string>
    <string name="str_1jour">1 day</string>
    <string name="str_1heure">1 hour</string>
    <string name="str_1semaine">1 week</string>
    <string name="str_1mois">1 month</string>
    <string name="str_1annee">1 year</string>
    <string name="str_nom_tache_vide">The name of the task is empty</string>
    <string name="str_tache_ajoutee">Task added</string>
    <string name="str_description_tache_vide">Description of the task is empty</string>
    <string name="str_defaut">Empty</string>
    <string name="str_details">Details</string>
    <string name="str_nom_categorie">Name of category</string>
    <string name="str_description_categorie">Desctription of category</string>
    <string name="str_categorie_ajoutee">Category added</string>
    <string name="str_categorie_supprimee">Category(ies) deleted</string>
    <string name="str_nom_categorie_vide">The category name is empty</string>
    <string name="str_description_categorie_vide">The category description is empty</string>
    <string name="str_suppr_task">Supprimer</string>
    <string name="str_modif">Modifier une tâche</string>
    <string name="str_categorie_non_supprimee">La catégorie n\'est pas vide</string>
    <string name="str_modif_tache">Modifier la tâche</string>
    <string name="str_tache_modif">Tâche Modifée</string>
    <string name="str_minute">minute</string>
    <string name="str_day">day</string>
    <string name="str_week">week</string>
    <string name="str_month">month</string>
    <string name="str_year">year</string>
    <string name="str_hour">hour</string>
    <string name="str_addEventCalendar">Add event to calendar</string>
    <string name="add_reminder_need_event_in_calendar">Add reminder (need event in calendar)</string>
    <string name="str_dureeRappel">Time of reminder(in minutes)</string>
</resources>