<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/dialog_view_tache_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nom"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textview_dialog_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nom"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_description"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textview_dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_description"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_categorie"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textview_dialog_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_categorie"
        />


</LinearLayout>