<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".AjoutTacheActivity">

    <EditText
        android:id="@+id/editTextNomTache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autofillHints="@string/str_nom_tache"
        android:ems="10"
        android:hint="@string/str_nom_tache"
        android:inputType="textAutoCorrect|textCapSentences"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/str_description_tache"
        android:ems="10"
        android:hint="@string/str_description_tache"
        android:inputType="textAutoCorrect|textCapSentences"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomTache"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/editTextNomTache"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomTache" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="40dp"
        android:maxHeight="114dp"
        android:orientation="horizontal"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription">

        <EditText
            android:id="@+id/editTextDuree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/str_duree_tache"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/str_duree_tache"
            android:inputType="number"
            android:minWidth="@dimen/min_width_2"
            android:minHeight="@dimen/min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinnerQualificatifDuree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_width_2"
            android:minHeight="@dimen/min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/editTextDateEchance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_width_2"
            android:text="@string/str_echeance" />

        <TextView
            android:id="@+id/editTextTimeEcheance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_width_2"
            android:text="@string/str_heure" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerRecurence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Spinner
        android:id="@+id/spinnerUrgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerRecurence"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/spinnerRecurence"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRecurence" />

    <Spinner
        android:id="@+id/spinnerCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerUrgence"
        app:layout_constraintStart_toStartOf="@+id/spinnerUrgence"
        app:layout_constraintTop_toBottomOf="@+id/spinnerUrgence" />

    <CheckBox
        android:id="@+id/checkBoxAjoutAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_addEventCalendar"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategorie"
        app:layout_constraintStart_toStartOf="@+id/spinnerCategorie"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorie" />

    <CheckBox
        android:id="@+id/checkBoxAjoutRappel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="2"
        android:maxLines="3"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        android:singleLine="false"
        android:text="@string/add_reminder_need_event_in_calendar"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxAjoutAgenda"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAjoutAgenda"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAjoutAgenda" />

    <EditText
        android:id="@+id/editTextDureeReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="@string/str_dureeRappel"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_dureeRappel"
        android:inputType="number"

        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxAjoutRappel"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAjoutRappel"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAjoutRappel" />

    <Button
        android:id="@+id/btnAjoutTache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        android:text="@string/str_ajout_tache"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>