<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModifTacheActivity"
        android:id="@+id/dialog_view_modif_tache_layout">

    <EditText
        android:id="@+id/editTextModifNomTache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoCorrect|textCapSentences"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextModifDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoCorrect|textCapSentences"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifNomTache" />

    <EditText
        android:id="@+id/editTextModifDuree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_duree_tache"
        android:inputType="textAutoCorrect|textCapSentences"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModifDuree">

        <TextView
            android:id="@+id/textViewModifDateEchance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:minHeight="@dimen/min_height"
            android:text="@string/str_echeance" />

        <TextView
            android:id="@+id/textViewModifTimeEcheance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:minHeight="@dimen/min_height"
            android:text="@string/str_heure" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerModifRecurence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/spinnerModifUrgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModifRecurence" />

    <Spinner
        android:id="@+id/spinnerModifCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModifUrgence" />

    <Button
        android:id="@+id/btnModifTache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:minWidth="@dimen/min_width"
        android:minHeight="@dimen/min_height"
        android:text="@string/str_modif_tache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModifUrgence" />


</androidx.constraintlayout.widget.ConstraintLayout>